# docker_ros_ydlidar_os30a

./: .gitmodules  README.md
robot_dog/: CMakeLists.txt  package.xml
robot_dog/launch/: robot.launch
robot_dog/rviz/: robot.rviz
robot_dog/src/: test_v5.py  test_v8.py  test_v8_ncnn.py
ros/: Makefile  README.md
ros/eys3d-ros/: Dockerfile
ros/robot-dog/: Dockerfile
ros/ydlidar-os30a/: Dockerfile
ydlidar_os30a/bimu-rgbd-camera/src/bimu_rgbd_camera/: CMakeLists.txt
yolo_detector_ros/: CMakeLists.txt  README.md  package.xml  requirements.txt
yolo_detector_ros/launch/: yolo_detector.launch
yolo_detector_ros/src/: detect.py
